--- a/src/assets/css/mystyle.css
+++ b/src/assets/css/mystyle.css
@@ -1,17 +1,17 @@
 .bg-sparta {
-  background-color: #0d6efd !important;
+  background-color: #198754 !important;
 }
 
 .btn-sparta {
   color: #ffffff !important;
-  background-color: #0d6efd !important;
-  border-color: #0d6efd !important;
+  background-color: #198754 !important;
+  border-color: #198754 !important;
 }
 
 .btn-outline-sparta {
-  color: #0d6efd !important;
+  color: #198754 !important;
   background-color: #ffffff !important;
-  border-color: #0d6efd !important;
+  border-color: #198754 !important;
 }
 
 .navbar-dark .navbar-nav .nav-link {
