Revert "Merge pull request #11 from joeunparkdev/feature/signup"
This reverts commit deaa21a3d988c243b9752ef6d6b4bc295290a231, reversing
changes made to d1e57b14a35f5f5fa8cb262cc401b0929871e3cc.

--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -51,7 +51,7 @@ body {
 .Heading {
   font-size: 25px;
   font-weight: 700;
-  color: #198754;
+  color: #0D6EFD;
 }
 
 .removeAll {
@@ -203,7 +203,7 @@ hr {
   width: 100%;
   height: 40px;
   border: none;
-  background: #198754;
+  background: #0D6EFD;
   border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
