--- a/src/assets/css/mystyle.css
+++ b/src/assets/css/mystyle.css
@@ -2,6 +2,19 @@
   background-color: #198754 !important;
 }
 
+.button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.editBtn,
+.deleteBtn,
+#createBtn,
+#deleteAllBtn {
+
+  margin-bottom: 10px; 
+}
+
 .btn-sparta {
   color: #ffffff !important;
   background-color: #198754 !important;
