책 상품 프론트엔드 CSS 중간 저장

--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -1,14 +1,17 @@
-.first-area {
+#productDetail {
   display: flex;
-  background-color: pink;
 }
 
-.first-area :first-child {
-  width: 40%;
+#productDetail :first-child {
+  width: 60%;
 }
-
-.first-area :last-child {
+#productDetail :last-child {
   width: 100%;
+}
+
+.product-detail-img {
+  width: 50%;
+  height: 100%;
 }
 
 .box {
