--- a/src/assets/css/community.css
+++ b/src/assets/css/community.css
@@ -1,35 +1,906 @@
-/* Additional community page styles */
+body {
+  background-image: url('../img/bg.png');
+  background-size: cover;
+  background-position: center;
+}
 
-  .search_container {
-    margin-top: 20px;
+body {
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+/* 그리드 설계 */
+
+.grid-1 {
+  display: grid;
+  width: 90vw;
+  max-width: 900px;
+  margin: 2% auto;
+  z-index: 1;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  grid-gap: 25px;
+  grid-template-areas: 't        t       t' 'd23      d20     d12' 'd2       d14     d4' 'd5       d22     d16' 'd1       d7      d9' 'd10      d11     d18' 'd13      d3      d15' 'd6       d17     d8' 'd19      d24     d21';
+}
+
+@media only screen and (min-width: 500px) {
+  .grid-1 {
+    /* 너비를 기준으로 높이를 계산 */
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-areas: 't     t     t     d2      d7      d8' 't     t     t     d4      d11     d12' 't     t     t     d19     d9      d13' 'd6    d1    d24   d24     d21     d20' 'd17   d18   d24   d24     d5      d22' 'd3    d23   d16   d14     d10     d15';
   }
-  
-  /* Style for popular and recent posts */
-  .slide_box {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 20px;
+}
+
+/* flex 속성 */
+
+.flex-row {
+  display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.item-baseline {
+  align-items: baseline;
+}
+
+.title {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  grid-area: t;
+}
+
+.title img {
+  width: 90%;
+  height: auto;
+}
+
+/* 그리드 별 배경 이미지 */
+
+.day-1 {
+  grid-area: d1;
+  background: url('../img/frame/frame1.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-1 .back {
+  background-image: url('../img/card/card-1.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-2 {
+  grid-area: d2;
+  background: url('../img/frame/frame2.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-2 .back {
+  background-image: url('../img/card/card-2.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-3 {
+  grid-area: d3;
+  background: url('../img/frame/frame3.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-3 .back {
+  background-image: url('../img/card/card-3.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-4 {
+  grid-area: d4;
+  background: url('../img/frame/frame4.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-4 .back {
+  background-image: url('../img/card/card-4.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-5 {
+  grid-area: d5;
+  background: url('../img/frame/frame5.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-5 .back {
+  background-image: url('../img/card/card-5.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-6 {
+  grid-area: d6;
+  background: url('../img/frame/frame6.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-6 .back {
+  background-image: url('../img/card/card-6.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-7 {
+  grid-area: d7;
+  background: url('../img/frame/frame7.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-7 .back {
+  background-image: url('../img/card/card-7.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-8 {
+  grid-area: d8;
+  background: url('../img/frame/frame8.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-8 .back {
+  background-image: url('../img/card/card-8.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-9 {
+  grid-area: d9;
+  background: url('../img/frame/frame9.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-9 .back {
+  background-image: url('../img/card/card-9.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-10 {
+  grid-area: d10;
+  background: url('../img/frame/frame10.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-10 .back {
+  background-image: url('../img/card/card-10.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-11 {
+  grid-area: d11;
+  background: url('../img/frame/frame11.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-11 .back {
+  background-image: url('../img/card/card-11.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-12 {
+  grid-area: d12;
+  background: url('../img/frame/frame12.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-12 .back {
+  background-image: url('../img/card/card-12.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-13 {
+  grid-area: d13;
+  background: url('../img/frame/frame13.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-13 .back {
+  background-image: url('../img/card/card-13.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-14 {
+  grid-area: d14;
+  background: url('../img/frame/frame14.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-14 .back {
+  background-image: url('../img/card/card-14.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-15 {
+  grid-area: d15;
+  background: url('../img/frame/frame15.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-15 .back {
+  background-image: url('../img/card/card-15.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-16 {
+  grid-area: d16;
+  background: url('../img/frame/frame16.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-16 .back {
+  background-image: url('../img/card/card-16.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-17 {
+  grid-area: d17;
+  background: url('../img/frame/frame17.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-17 .back {
+  background-image: url('../img/card/card-17.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-18 {
+  grid-area: d18;
+  background: url('../img/frame/frame18.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-18 .back {
+  background-image: url('../img/card/card-18.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-19 {
+  grid-area: d19;
+  background: url('../img/frame/frame19.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-19 .back {
+  background-image: url('../img/card/card-19.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-20 {
+  grid-area: d20;
+  background: url('../img/frame/frame20.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-20 .back {
+  background-image: url('../img/card/card-20.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-21 {
+  grid-area: d21;
+  background: url('../img/frame/frame21.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-21 .back {
+  background-image: url('../img/card/card-21.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-22 {
+  grid-area: d22;
+  background: url('../img/frame/frame22.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-22 .back {
+  background-image: url('../img/card/card-22.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-23 {
+  grid-area: d23;
+  background: url('../img/frame/frame23.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-23 .back {
+  background-image: url('../img/card/card-23.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-24 {
+  grid-area: d24;
+  background: url('../img/frame/frame24.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-24 .back {
+  background-image: url('../img/card/card-24.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+/* door styles */
+
+.grid-1 input {
+  display: none;
+}
+
+label {
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  display: flex;
+  min-height: 100%;
+  width: 100%;
+  height: 120px;
+}
+
+/* flex 속성 */
+
+.flex-row {
+  display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.item-baseline {
+  align-items: baseline;
+}
+
+.title {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  grid-area: t;
+}
+
+.title img {
+  width: 90%;
+  height: auto;
+}
+
+/* 그리드 별 배경 이미지 */
+
+.day-1 {
+  grid-area: d1;
+  background: url('../img/frame/frame1.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-1 .back {
+  background-image: url('../img/card/card-1.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-2 {
+  grid-area: d2;
+  background: url('../img/frame/frame2.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-2 .back {
+  background-image: url('../img/card/card-2.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-3 {
+  grid-area: d3;
+  background: url('../img/frame/frame3.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-3 .back {
+  background-image: url('../img/card/card-3.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-4 {
+  grid-area: d4;
+  background: url('../img/frame/frame4.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-4 .back {
+  background-image: url('../img/card/card-4.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-5 {
+  grid-area: d5;
+  background: url('../img/frame/frame5.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-5 .back {
+  background-image: url('../img/card/card-5.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-6 {
+  grid-area: d6;
+  background: url('../img/frame/frame6.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-6 .back {
+  background-image: url('../img/card/card-6.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-7 {
+  grid-area: d7;
+  background: url('../img/frame/frame7.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-7 .back {
+  background-image: url('../img/card/card-7.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-8 {
+  grid-area: d8;
+  background: url('../img/frame/frame8.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-8 .back {
+  background-image: url('../img/card/card-8.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-9 {
+  grid-area: d9;
+  background: url('../img/frame/frame9.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-9 .back {
+  background-image: url('../img/card/card-9.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-10 {
+  grid-area: d10;
+  background: url('../img/frame/frame10.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-10 .back {
+  background-image: url('../img/card/card-10.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-11 {
+  grid-area: d11;
+  background: url('../img/frame/frame11.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-11 .back {
+  background-image: url('../img/card/card-11.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-12 {
+  grid-area: d12;
+  background: url('../img/frame/frame12.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-12 .back {
+  background-image: url('../img/card/card-12.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-13 {
+  grid-area: d13;
+  background: url('../img/frame/frame13.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-13 .back {
+  background-image: url('../img/card/card-13.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-14 {
+  grid-area: d14;
+  background: url('../img/frame/frame14.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-14 .back {
+  background-image: url('../img/card/card-14.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-15 {
+  grid-area: d15;
+  background: url('../img/frame/frame15.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-15 .back {
+  background-image: url('../img/card/card-15.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-16 {
+  grid-area: d16;
+  background: url('../img/frame/frame16.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-16 .back {
+  background-image: url('../img/card/card-16.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-17 {
+  grid-area: d17;
+  background: url('../img/frame/frame17.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-17 .back {
+  background-image: url('../img/card/card-17.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-18 {
+  grid-area: d18;
+  background: url('../img/frame/frame18.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-18 .back {
+  background-image: url('../img/card/card-18.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-19 {
+  grid-area: d19;
+  background: url('../img/frame/frame19.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-19 .back {
+  background-image: url('../img/card/card-19.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-20 {
+  grid-area: d20;
+  background: url('../img/frame/frame20.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-20 .back {
+  background-image: url('../img/card/card-20.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-21 {
+  grid-area: d21;
+  background: url('../img/frame/frame21.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-21 .back {
+  background-image: url('../img/card/card-21.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-22 {
+  grid-area: d22;
+  background: url('../img/frame/frame22.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-22 .back {
+  background-image: url('../img/card/card-22.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-23 {
+  grid-area: d23;
+  background: url('../img/frame/frame23.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-23 .back {
+  background-image: url('../img/card/card-23.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.day-24 {
+  grid-area: d24;
+  background: url('../img/frame/frame24.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.day-24 .back {
+  background-image: url('../img/card/card-24.png');
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+/* door styles */
+
+.grid-1 input {
+  display: none;
+}
+
+label {
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  display: flex;
+  min-height: 100%;
+  width: 100%;
+  height: 120px;
+}
+
+/* 카드 앞면 */
+
+.door {
+  width: 100%;
+  transform-style: preserve-3d;
+  transition: all 300ms;
+  border-radius: 10px;
+}
+
+.date-num {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  color: white;
+}
+
+/* 카드 뒷면 */
+
+.door div {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 6px;
+  font-size: 1.2em;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.2);
+}
+
+/* 카드 뒤집기 애니메이션 */
+
+.door .back {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  transform: rotateY(180deg);
+}
+
+:checked + .door {
+  transform: rotateY(180deg);
+}
+
+/* 확대 및 회전 애니메이션 */
+
+@keyframes zoomAndRotate {
+  from {
+    transform: scale(0) rotateY(0deg);
   }
-  
-  .slide_title {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 10px;
+  to {
+    transform: scale(1) rotateY(360deg);
   }
-  
-  .card_box {
-    margin-right: 10px;
-  }
-  
-  .pop_card,
-  .play_card {
-    position: relative;
-  }
-  
-  .detail_button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  
+}
+
+/* 애니메이션 적용 */
+
+.zoomIn {
+  animation: zoomAndRotate 0.5s ease forwards;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
+.modal-content {
+  width: 340px;
+  height: 347px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  text-align: center;
+  overflow: hidden;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 이미지와 텍스트가 있는 카드를 위한 스타일 */
+
+.modal-content div {
+  background-size: cover;
+  background-position: center;
+  border-radius: 12px;
+}
+
+.modal-content p {
+  width: 300px;
+  color: black;
+  margin-top: 30px;
+  margin-bottom: 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  font-weight: bold;
+  font-size: 17px;
+  word-break: keep-all;
+}
