책 상품 frontend 기능 구현 중간 저장

--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -19,6 +19,11 @@
   height: 100px;
 }
 
+.book-detail-text {
+  width: 100vh;
+  background-color: aquamarine;
+}
+
 /* .mt-4 {
   width: 100vh;
   display: flex;
@@ -26,34 +31,18 @@
   justify-content: center;
 } */
 
-.book-info {
-  margin-bottom: 20px;
-}
-
-/* 스타일 추가 */
-.book-info h2,
-.book-info div {
-  margin: 0;
-  padding: 5px 0;
-}
-
-.buy-button {
-  margin-top: 20px;
-}
-
 .buy-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
 }
 .buy-button :first-child {
-  width: 50%;
+  width: 100%;
   height: 50px;
 }
 
 .buy-button :last-child {
-  width: 50%;
+  width: 100%;
   height: 50px;
 }
 .second-area {
