--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -1,3 +1,21 @@
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  margin-top: 100px;
+}
+
+.first-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  border: 3px solid none;
+}
+
 #productDetail {
   display: flex;
 }
@@ -9,19 +27,20 @@
   width: 100%;
 }
 
+.book-detail-text {
+  margin-left: 10px;
+}
+
 .product-detail-img {
-  width: 50%;
-  height: 100%;
+  width: 50px;
+  height: 50vh;
+  border: 5px solid none;
 }
 
 .box {
-  width: 100vh;
+  width: 100%;
   height: 100px;
-}
-
-.book-detail-text {
-  width: 100vh;
-  background-color: aquamarine;
+  margin-top: 3.5%;
 }
 
 /* .mt-4 {
@@ -35,27 +54,37 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 3px solid none;
+  margin-top: 15%;
 }
+
 .buy-button :first-child {
   width: 100%;
-  height: 50px;
+  height: 40px;
 }
 
 .buy-button :last-child {
-  width: 100%;
-  height: 50px;
+  height: 40px;
+  width: 50%;
 }
+
+.move {
+  width: 100vh;
+  height: 30vh;
+}
+
+.space-controller {
+  width: 100px;
+  height: 1000px;
+  margin-bottom: 100px;
+}
+
 .second-area {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 .my-2 {
   display: flex;
   position: relative;
-}
-
-.review-revise-btn {
-  position: absolute;
-  right: 0;
 }
 
 .second-area div {
@@ -75,7 +104,7 @@
   height: 100px;
   border: 1px solid #bbb;
   border-radius: 10px;
-  padding-right: 15%;
+  padding-right: 17.5%;
   padding-left: 1%;
   font-size: 100%;
   resize: none; /* textarea 크기 조절 비활성화 */
@@ -92,4 +121,22 @@
   cursor: pointer;
   font-size: 90%;
   color: rgb(255, 255, 255);
+}
+
+.review-revise-btn {
+  display: flex;
+}
+
+.review-revise-btn :first-child {
+  width: 17%;
+}
+
+.review-revise-btn :last-child {
+  width: 17%;
+}
+
+.star-rating {
+  display: inline-block;
+  font-size: 24px;
+  color: #ffd700;
 }
