--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -129,9 +129,16 @@ hr {
   width: 100px;
   height: 100px;
   border: none;
+  border-radius: 10px;
   display: flex;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
+}
+
+.imgBox img {
+  width: 100px;
+  height: auto;
 }
 .itemInfor {
   display: flex;
