--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -10,18 +10,18 @@
 }
 
 .product-detail-img {
-  width: 50%;
+  width: 100%;
   height: 100%;
+  border: 1px solid none;
 }
-
 .box {
   width: 100vh;
   height: 100px;
+  margin-right: 10px;
 }
 
 .book-detail-text {
   width: 100vh;
-  background-color: aquamarine;
 }
 
 /* .mt-4 {
@@ -92,4 +92,10 @@
   cursor: pointer;
   font-size: 90%;
   color: rgb(255, 255, 255);
+}
+
+.move {
+  height: 1000px;
+  width: 50px;
+  margin-top: 100vh;
 }
