--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -14,7 +14,7 @@ form {
   justify-content: center;
   margin-bottom: 10px;
   border: 3px solid none;
-
+  margin-top: 50px;
 }
 
 #productDetail {
@@ -114,7 +114,7 @@ form {
 }
 
 .move {
-  height: 1000px;
+  height: 10px;
   width: 50px;
-  margin-top: 100vh;
+  margin-top: 10vh;
 }
