--- a/src/assets/css/book.detail.css
+++ b/src/assets/css/book.detail.css
@@ -31,7 +31,7 @@ form {
 .product-detail-img {
   width: 100%;
   height: 100%;
-  border: 1px solid none;
+  border: 15px solid white;
 }
 .box {
   width: 100vh;
@@ -54,6 +54,7 @@ form {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 .buy-button :first-child {
   width: 100%;
@@ -73,8 +74,8 @@ form {
 }
 
 .review-revise-btn {
-  position: absolute;
-  right: 0;
+  display: flex;
+
 }
 
 .second-area div {
@@ -114,7 +115,7 @@ form {
 }
 
 .move {
-  height: 1000px;
+  height: 20px;
   width: 50px;
-  margin-top: 100vh;
+  margin-top: 20vh;
 }
